--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,3 @@
-{% extends "layout.html" %}
-{% block content %}
-    {% for post in posts %}
-    <h1>{{ post.title }}</h1>
-    <p>By {{ post.author }} on {{ post.date_posted }}</p>
-    <p>{{ post.content }}</p>
-    {% endfor %}
-
-    {% endblock content %}
-    
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,6 +10,6 @@
         {% endif %}
 </head>
 <body>
-    <h1>This is about page!</h1>
+    {% block content %} {% endblock %}
 </body>
 </html>
