--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css')}}">
 
     <!--Bootsrap CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -39,7 +40,7 @@
 <main role="main" class="container">
     <div class="row">
         <div class="col-md-8">
-            {% block content %}{% endblock}
+            {% block content %} {% endblock %}
         </div>
         <div class="col-md-4">
             <div class="content-section">
