--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,6 +49,7 @@
                     <ul>
                         <li>Latest Posts</li>
                         <li>Announcement</li>
+                        <li>Calenders</li>
                         <li>etc</li>
                     </ul>
                 </p>
@@ -59,8 +60,8 @@
 
     <!--Optimal JavaScript-->
     <!--JQuery First, then popper.js then bootstrap JS-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.js" intergrity="sha384-KJ3o20ktIKvYIK3UENzaM7KCkRr/rE9/Qpg6aAZGJwDMVNA/GpGFF93hXpG5KKN" crossorigin="annonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" intergrity="sha384-ApNbg9b+Y10Ktv3Rn7W3mgpxHu9k/ScQsAP7hUibx39j7fakFPskvXusfa0b4Q" crossorigin="annonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" intergrity="sha384-KJ3o2DktIKvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwDMVNA/GpGFF93hXpG5KKN" crossorigin="annonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" intergrity="sha384-ApNbg9b+Y1QKtv3Rn7W3mgpxHu9k/ScQsAP7hUibx39j7fakFPskvXusvfa0b4Q" crossorigin="annonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" intergrity="sha384-JZR6Speh4Ue02d8j02d8j0t6vLEHfe/JQG1RSQQxSfFWp1ImquVdAyjUar5+76PVCmYl" crossorigin="annonymous"></script>
 </body>
 </html>
