--- a/templates/login.html
+++ b/templates/login.html
@@ -4,10 +4,11 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
+
             <legend class="border-bottom mb-4">Log In</legend>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
-                {% if form.email.errors %}
+                {% if form.email.error %}
                 {{ form.email(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
                     {% for error in form.email.error %}
@@ -18,9 +19,10 @@
                 {{ form.email(class="form-control form-control-lg") }} 
                 {% endif %}
             </div>
+
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
-                {% if form.password.errors %}
+                {% if form.password.error %}
                 {{ form.password(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
                     {% for error in form.password.error %}
@@ -36,6 +38,7 @@
                 {{ form.remember.label(class="form-check-input-label")}}
             </div>
         </fieldset>
+
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
