--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
             <div class="form-group">
                 {{ form.username.label(class="form-control-label") }}
 
-                {% if form.username.errors %}
+                {% if form.username.error %}
                 {{ form.username(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
                     {% for error in form.username.error %}
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
-                {% if form.email.errors %}
+                {% if form.email.error %}
                 {{ form.email(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
                     {% for error in form.email.error %}
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
-                {% if form.password.errors %}
+                {% if form.password.error %}
                 {{ form.password(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
                     {% for error in form.password.error %}
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
                 {{ form.confirm_password.label(class="form-control-label") }}
-                {% if form.confirm_password.errors %}
+                {% if form.confirm_password.error %}
                 {{ form.confirm_password(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
                     {% for error in form.confirm_password.error %}
