--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-<!-- {% block content %}
+{% block content %}
     {% for post in posts %}
     <article class="media content-section">
         <div class="media-body">
@@ -13,4 +13,4 @@
     </article>
     {% endfor %}
 
-    {% endblock content %} -->
+    {% endblock content %}
