--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -32,7 +32,7 @@
                     <!--Navbar Right Side-->
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="/login">Login</a>
-                        <a class="nav-item nav-link" href="/registration">Register</a>
+                        <a class="nav-item nav-link" href="/registration"></a>
                     </div>
                 </div>
             </div>
