--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -31,7 +31,7 @@
                     </div>
                     <!--Navbar Right Side-->
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="/login">LOGIN</a>
+                        <a class="nav-item nav-link" href="/login">Login</a>
                         <a class="nav-item nav-link" href="/registration">REGISTER</a>
                     </div>
                 </div>
