--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -20,7 +20,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="/">FLask Blog</a>
+                <a class="navbar-brand mr-4" href="/">FLask-Blog</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="/">
                 <span class="navbar-toggler-icon"></span>
                 </button>
