--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -1,17 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="content-section">
-    <form method="POST" action="">
+    <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Join Today</legend>
             <div class="form-group">
                 {{ form.username.label(class="form-control-label") }}
 
-                {% if form.username.error %}
+                {% if form.username.errors %}
                 {{ form.username(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.username.error %}
+                    {% for error in form.username.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
@@ -22,10 +22,10 @@
             </div>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
-                {% if form.email.error %}
+                {% if form.email.errors %}
                 {{ form.email(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.email.error %}
+                    {% for error in form.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
@@ -35,10 +35,10 @@
             </div>
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
-                {% if form.password.error %}
+                {% if form.password.errors %}
                 {{ form.password(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.password.error %}
+                    {% for error in form.password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
@@ -48,15 +48,23 @@
             </div>
             <div class="form-group">
                 {{ form.confirm_password.label(class="form-control-label") }}
-                {% if form.confirm_password.error %}
+                {% if form.confirm_password.errors %}
                 {{ form.confirm_password(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.confirm_password.error %}
+                    {% for error in form.confirm_password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
                 {{ form.confirm_password(class="form-control form-control-lg") }} 
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.picture.label() }}
+                {{ form.picture(class=form-control-file) }}
+                {% if form.picture.errors %}
+                    {% for error in form.picture .errors %}
+                    <span class="text-danger">{{ error }}</span></div><br>
                 {% endif %}
             </div>
         </fieldset>
