--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -7,7 +7,7 @@
             <legend class="border-bottom mb-4">Join Today</legend>
             <div class="form-group">
                 {{ form.username.label(class="form-control-label") }}
-
+                <!-- {{ form.username(class="form-control form-control-lg") }} -->
                 {% if form.username.errors %}
                 {{ form.username(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
@@ -59,16 +59,6 @@
                 {{ form.confirm_password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
-                {{ form.picture.label() }}
-                {{ form.picture(class=form-control-file) }}
-                {% if form.picture.errors %}
-                {% for error in form.picture.errors %}
-                <span class="text-danger">{{ error }}</span>
-                {% endfor %}
-            </div><br>
-            {% endif %}
-</div>
 </fieldset>
 <div class="form-group">
     {{ form.submit(class="btn btn-outline-info") }}
