--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -39,6 +39,16 @@
                     {{ form.email(class="form-control form-control-lg") }} 
                     {% endif %}
                 </div>
+                <div class="form-group">
+                {{ form.picture.label() }}
+                {{ form.picture(class=form-control-file) }}
+                {% if form.picture.errors %}
+                {% for error in form.picture.errors %}
+                <span class="text-danger">{{ error }}</span>
+                {% endfor %}
+            </div><br>
+            {% endif %}
+</div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
