--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -8,10 +8,10 @@
             <legend class="border-bottom mb-4">Log In</legend>
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
-                {% if form.email.error %}
+                {% if form.email.errors %}
                 {{ form.email(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.email.error %}
+                    {% for error in form.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
@@ -22,10 +22,10 @@
 
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
-                {% if form.password.error %}
+                {% if form.password.errors %}
                 {{ form.password(class="form-control form-control-lg is-valid") }}
                 <div class="invalid-feedback">
-                    {% for error in form.password.error %}
+                    {% for error in form.password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
