--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -15,7 +15,7 @@
                     {{ form.username.label(class="form-control-label") }}
     
                     {% if form.username.errors %}
-                    {{ form.username(class="form-control form-control-lg is-valid") }}
+                    {{ form.username(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
                         {% for error in form.username.errors %}
                         <span>{{ error }}</span>
