--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -61,11 +61,11 @@
             <div class="content-section">
                 <h3>Our Sidebar</h3>
                 <p class="text-muted">You can put any information here you'd like.
-                    <ul>
-                        <li>Latest Posts</li>
-                        <li>Announcement</li>
-                        <li>Calenders</li>
-                        <li>Etc</li>
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item-light">Latest Posts</li>
+                        <li class="list-group-item list-group-item-light">Announcement</li>
+                        <li class="list-group-item list-group-item-light">Calenders</li>
+                        <li class="list-group-item list-group-item-light">Etc</li>
                     </ul>
                 </p>
             </div>
