--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -29,7 +29,7 @@
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
                     {% if form.email.errors %}
-                    {{ form.email(class="form-control form-control-lg is-valid") }}
+                    {{ form.email(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
                         {% for error in form.email.errors %}
                         <span>{{ error }}</span>
@@ -38,18 +38,19 @@
                     {% else %}
                     {{ form.email(class="form-control form-control-lg") }} 
                     {% endif %}
+                    <br>
                 </div>
                 <div class="form-group">
                 {{ form.picture.label() }}
                 {{ form.picture(class="form-control-file") }}
                 {% if form.picture.errors %}
                 {% for error in form.picture.errors %}
-                <span class="text-danger">{{ error }}</span>
+                    <span class="text-danger">{{ error }}</span>
                 {% endfor %}
-            </div><br>
             {% endif %}
-</div>
+                </div>
             </fieldset>
+            <br>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
