--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -38,19 +38,17 @@
                     {% else %}
                     {{ form.email(class="form-control form-control-lg") }} 
                     {% endif %}
-                    <br>
                 </div>
                 <div class="form-group">
-                {{ form.picture.label() }}
-                {{ form.picture(class="form-control-file") }}
-                {% if form.picture.errors %}
-                {% for error in form.picture.errors %}
-                    <span class="text-danger">{{ error }}</span>
-                {% endfor %}
-            {% endif %}
+                    {{ form.picture.label() }}
+                    {{ form.picture(class="form-control-file") }}
+                    {% if form.picture.errors %}
+                        {% for error in form.picture.errors %}
+                            <span class="text-danger">{{ error }}</span></br>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </fieldset>
-            <br>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
