--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,57 +1,43 @@
 {% extends "layout.html" %}
+
 {% block content %}
-<div class="content-section">
-    <div class="media">
-        <img class="rounded-circle account-img" src="{{ image_file }}">
-        <div class="media-body">
-            <h2 class="account-heading">{{ current_user.username }}</h2>
-            <p class="text-secondary">{{ current_user.email }}</p>
-    </div>
-        <form method="POST" action="">
+    <div class="content-section">
+        <form method="post" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Account Info</legend>
+                <legend class="border-bottom mb-4">New post</legend>
                 <div class="form-group">
-                    {{ form.username.label(class="form-control-label") }}
-    
-                    {% if form.username.errors %}
-                    {{ form.username(class="form-control form-control-lg is-invalid") }}
+                    {{ form.title.label(class="form-control-label") }}
+                    {% if form.title.errors %}
+                    {{ form.title(class="form-control form-control-lg is-valid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.username.errors %}
+                        {% for error in form.title.errors %}
                         <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                     {% else %}
-                    {{ form.username(class="form-control form-control-lg") }} 
+                    {{ form.title(class="form-control form-control-lg") }} 
                     {% endif %}
-    
                 </div>
+
                 <div class="form-group">
-                    {{ form.email.label(class="form-control-label") }}
-                    {% if form.email.errors %}
-                    {{ form.email(class="form-control form-control-lg is-invalid") }}
+                    {{ form.content.label(class="form-control-label") }}
+                    {% if form.content.errors %}
+                    {{ form.content(class="form-control form-control-lg is-valid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.email.errors %}
+                        {% for error in form.content.errors %}
                         <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                     {% else %}
-                    {{ form.email(class="form-control form-control-lg") }} 
-                    {% endif %}
-                </div>
-                <div class="form-group">
-                    {{ form.picture.label() }}
-                    {{ form.picture(class="form-control-file") }}
-                    {% if form.picture.errors %}
-                        {% for error in form.picture.errors %}
-                            <span class="text-danger">{{ error }}</span></br>
-                        {% endfor %}
+                    {{ form.content(class="form-control form-control-lg") }} 
                     {% endif %}
                 </div>
             </fieldset>
+
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
-        </form>    
-</div>
+        </form>
+    </div>
 {% endblock content %}
