--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -55,7 +55,7 @@
             {% endfor %}
             {% endif %}
             {% endwith %}
-            <!-- {% block content %} {% endblock %} -->
+            {% block content %} {% endblock %}
         </div>
         <div class="col-md-4">
             <div class="content-section">
