--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -4,12 +4,11 @@
         <form method="post" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-
                 <legend class="border-bottom mb-4">New Post</legend>
                 <div class="form-group">
                     {{ form.title.label(class="form-control-label") }}
                     {% if form.title.errors %}
-                    {{ form.title(class="form-control form-control-lg is-valid") }}
+                    {{ form.title(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
                         {% for error in form.title.errors %}
                         <span>{{ error }}</span>
@@ -19,11 +18,10 @@
                     {{ form.title(class="form-control form-control-lg") }} 
                     {% endif %}
                 </div>
-
                 <div class="form-group">
                     {{ form.content.label(class="form-control-label") }}
                     {% if form.content.errors %}
-                    {{ form.content(class="form-control form-control-lg is-valid") }}
+                    {{ form.content(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
                         {% for error in form.content.errors %}
                         <span>{{ error }}</span>
@@ -33,9 +31,7 @@
                     {{ form.content(class="form-control form-control-lg") }} 
                     {% endif %}
                 </div>
-
             </fieldset>
-
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
