--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -31,12 +31,12 @@
                     <!--Navbar Right Side-->
                     <div class="navbar-nav">
                         {% if current_user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{{url_for('new_post') }}">New Post</a>
-                        <a class="nav-item nav-link" href="{{url_for('account') }}">Account</a>
-                        <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        <a class="nav-item nav-link" href="{{url_for('posts.new_post') }}">New Post</a>
+                        <a class="nav-item nav-link" href="{{url_for('users.account') }}">Account</a>
+                        <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
                         {% else %}
-                        <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                        <a class="nav-item nav-link" href="{{ url_for('registration') }}">Register</a>
+                        <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
+                        <a class="nav-item nav-link" href="{{ url_for('users.registration') }}">Register</a>
                         {%endif %}
                     </div>
                 </div>
