--- a/flaskblog/templates/reset_token.html
+++ b/flaskblog/templates/reset_token.html
@@ -9,7 +9,7 @@
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
                 {% if form.password.errors %}
-                {{ form.password(class="form-control form-control-lg is-valid") }}
+                {{ form.password(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
                     {% for error in form.password.errors %}
                     <span>{{ error }}</span>
@@ -22,7 +22,7 @@
             <div class="form-group">
                 {{ form.confirm_password.label(class="form-control-label") }}
                 {% if form.confirm_password.errors %}
-                {{ form.confirm_password(class="form-control form-control-lg is-valid") }}
+                {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
                     {% for error in form.confirm_password.errors %}
                     <span>{{ error }}</span>
