--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %}
-{% block content%}
+ {% extends "layout.html" %}
+{% block content %}
     <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file)}}">
         <div class="media-body">
@@ -25,22 +25,24 @@
     </button> -->
     <!-- Modal -->
     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="deleteModalLabel">Delete Post?</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <!-- <div class="modal-body">
-              ...
-            </div> -->
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
-                <input class="btn btn-danger" type="submit" value="Delete">
-              </form>
-            </div>
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="deleteModalLabel">Delete Post?</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <!-- <div class="modal-body">
+            ...
+          </div> -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <form action="{{ url_for('posts.delete_post', post_id=post.id) }}" method="POST">
+              <input class="btn btn-danger" type="submit" value="Delete">
+            </form>
           </div>
         </div>
-    </div>
+      </div>
+  </div>
 {% endblock content %}
+
+{{ url_for('posts.user_post',username=post.author.username) }}
